--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Free Crochet Bedspread Patterns</title>
+<title>Free Crochet  Patterns</title>
 <meta name="keywords" content="doily, free, crochet, crocheting, freebies, free crochet patterns, tablecloths, bedspreads, afghans floral, oval, round, pineapple, decorative doilies, crocheting cotton, thread" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/style.css" rel="stylesheet" type="text/css"  media="all" />
@@ -36,21 +36,15 @@
 <div class="main"><br><center><font face="verdana" size="4" color="red"><B>NEWEST - FREE CROCHET PATTERNS</B></font></center><br>
 
 <div class="grid-view"><div class="prev"><a href="bedspread/daisydell.html"><img src="bedspread/images/daisydellt.jpg" alt="" /></a></div><p><a href="bedspread/daisydell.html">Daisy In The Dell</a></p></div>
-						
-
 <div class="grid-view"><div class="prev"><a href="bedspread/poin.html"><img src="bedspread/images/point.jpg" alt="" /></a></div><p><a href="bedspread/poin.html">Poinsettia Posy</a></p></div>
-     
-
 <div class="grid-view"><div class="prev"><a href="floral/rosebouquet.html"><img src="floral/images/rosebouquett.jpg" alt="" /></a></div><p><a href="floral/rosebouquet.html">Rose Bouquet</a></p></div>
-
 <div class="grid-view"><div class="prev"><a href="round/fan.html"><img src="round/images/fant.jpg" alt="" /></a></div><p><a href="round/fan.html">Shell Fan </a></p></div>
-
 <div class="grid-view"><div class="prev"><a href="round/picot.html"><img src="round/images/picott.jpg" alt="" /></a></div><p><a href="round/picot.html">Picot Doily </a></p></div>
-
+<div class="grid-view"><div class="prev"><a href="round/links.html"><img src="round/images/linkst.jpg" alt="" /></a></div><p><a href="round/links.html">Lacy Links</a></p></div>
 
 <div class="grid-view"><div class="prev"><a href="bedspread/daisydell.html"><img src="bedspread/images/daisydellt.jpg" alt="" /></a></div><p><a href="bedspread/daisydell.html">Daisy In The Dell</a></p></div>
-
-
+<div class="grid-view"><div class="prev"><a href="bedspread/daisydell.html"><img src="bedspread/images/daisydellt.jpg" alt="" /></a></div><p><a href="bedspread/daisydell.html">Daisy In The Dell</a></p></div>
+<div class="grid-view"><div class="prev"><a href="bedspread/daisydell.html"><img src="bedspread/images/daisydellt.jpg" alt="" /></a></div><p><a href="bedspread/daisydell.html">Daisy In The Dell</a></p></div>
 
 
 
