--- a/round.html
+++ b/round.html
@@ -33,17 +33,33 @@
    
 		
 	
-<div class="main"><br><center><font face="verdana" size="4" color="red"><B>FREE DECORATIVE ROUND CROCHET DOILY PATTERNS</B></font></center><br>
+<div class="main"><br><center><font face="arial black" color="#76769B" size="5"><b>Free Decorative Crochet Patterns</b></font><br><br></center>
+
+
+<div class="grid-view"><div class="prev"><a href="round/autumn.html"><img src="round/images/autumnt.jpg" alt="" /></a></div><p><a href="round/autumn.html">Autumn Wheat Doily</a></p></div>
+
+<div class="grid-view"><div class="prev"><a href="round/cathedral.html"><img src="round/images/cathedralt.jpg" alt="" /></a></div><p><a href="round/cathedral.html">Cathedral Window Doily</a></p></div>
+
+<div class="grid-view"><div class="prev"><a href="round/greenpink.html"><img src="round/images/greenpinkt.jpg" alt="" /></a></div><p><a href="round/greenpink.html">Green Pink Doily</a></p></div>
 
 <div class="grid-view"><div class="prev"><a href="round/fan.html"><img src="round/images/fant.jpg" alt="" /></a></div><p><a href="round/fan.html">Shell Fan Doily</a></p></div>
-<div class="grid-view"><div class="prev"><a href="round/picot.html"><img src="round/images/picott.jpg" alt="" /></a></div><p><a href="round/picot.html">Picot Doily</a></p></div>
+
 <div class="grid-view"><div class="prev"><a href="round/links.html"><img src="round/images/linkst.jpg" alt="" /></a></div><p><a href="round/links.html">Lacy Links Doily</a></p></div>
 
 <div class="grid-view"><div class="prev"><a href="round/picot.html"><img src="round/images/picott.jpg" alt="" /></a></div><p><a href="round/picot.html">Picot Doily</a></p></div>
-<div class="grid-view"><div class="prev"><a href="round/picot.html"><img src="round/images/picott.jpg" alt="" /></a></div><p><a href="round/picot.html">Picot Doily</a></p></div>
-<div class="grid-view"><div class="prev"><a href="round/picot.html"><img src="round/images/picott.jpg" alt="" /></a></div><p><a href="round/picot.html">Picot Doily</a></p></div>
-<div class="grid-view"><div class="prev"><a href="round/picot.html"><img src="round/images/picott.jpg" alt="" /></a></div><p><a href="round/picot.html">Picot Doily</a></p></div>
-<div class="grid-view"><div class="prev"><a href="round/picot.html"><img src="round/images/picott.jpg" alt="" /></a></div><p><a href="round/picot.html">Picot Doily</a></p></div>
+
+<div class="grid-view"><div class="prev"><a href="round/pond.html"><img src="round/images/pondt.jpg" alt="" /></a></div><p><a href="round/pond.html">Pond Lily Doily</a></p></div>
+
+<div class="grid-view"><div class="prev"><a href="round/scallop.html"><img src="round/images/scallopt.jpg" alt="" /></a></div><p><a href="round/scallop.html">Sea Scallop Doily</a></p></div>
+
+
+
+
+
+
+
+
+
 <div class="grid-view"><div class="prev"><a href="round/picot.html"><img src="round/images/picott.jpg" alt="" /></a></div><p><a href="round/picot.html">Picot Doily</a></p></div>
 <div class="grid-view"><div class="prev"><a href="round/picot.html"><img src="round/images/picott.jpg" alt="" /></a></div><p><a href="round/picot.html">Picot Doily</a></p></div>
 
