--- a/floral.html
+++ b/floral.html
@@ -25,33 +25,14 @@
                 <li><a href="oval.html">Oval Doily Patterns</a></li>
                 <li><a href="square.html">Square Doily Patterns</a></li>
                 <li><a href="tablecloth.html">Tablecloth Patterns</a></li>
-                <li><a href="category.html">Sports & Fitness</a></li>
-                <li><a href="category.html">Travel & Hotel</a></li>
-                <li><a href="category.html">Web Hosting</a></li>
+     
             </ul>
         </div>
-        <div class="side">
-            <h3>Mobile Templates</h3>
-            <ul>
-                <li><a href="category.html">Abstract</a></li>
-                <li><a href="category.html">Animals & Pets</a></li>
-                <li><a href="category.html">Art & Photography</a></li>
-                <li><a href="category.html">Beauty & Fashion</a></li>
-                <li><a href="category.html">Business</a></li>
-                <li><a href="category.html">Communications</a></li>
-                <li><a href="category.html">Computers & Technologies</a></li>
-                <li><a href="category.html">Shopping</a></li>
-                <li><a href="category.html">Sports & Fitness</a></li>
-                <li><a href="category.html">Travel & Hotel</a></li>
-                <li><a href="category.html">Web Hosting</a></li>
-            </ul>
-        </div>
+ 
     </div>
    
 		
-	
-<div class="main"><br><center><font face="comic sans ms" size="4" color="#993366"><B>FREE FLORAL CROCHET DOILY PATTERNS</B></font></center><br>
-
+<div class="main"><center><font face="Tahoma" color="red" size="5"><b> Free Floral Crochet Doily Patterns</b></font><br></center>
 <div class="grid-view"><div class="prev"><a href="floral/bouquet.html"><img src="floral/images/bouquett.jpg" alt="" /></a></div>
 <p><a href="floral/bouquet.html">Bouquet Doily</a></p></div>
 						
@@ -180,6 +161,9 @@
 
 <div class="grid-view"><div class="prev"><a href="floral/roset.html"><img src="floral/images/rosett.jpg" alt="" /></a></div>
 <p><a href="floral/roset.html">Rose Doily Set</a></p></div>
+
+<div class="grid-view"><div class="prev"><a href="floral/rosew.html"><img src="floral/images/rosewt.jpg" alt="" /></a></div>
+<p><a href="floral/rosew.html">Rosewhirl Doily</a></p></div>
 
 <div class="grid-view"><div class="prev"><a href="floral/rosewreath.html"><img src="floral/images/rosewreatht.jpg" alt="" /></a></div>
 <p><a href="floral/rosewreath.html">Rose Wreath</a></p></div>
