--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
 <meta name="keywords" content="doily, free, crochet, crocheting, freebies, free crochet patterns, tablecloths, bedspreads, afghans floral, oval, round, pineapple, decorative doilies, crocheting cotton, thread" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/style.css" rel="stylesheet" type="text/css"  media="all" />
+<style> #rcorners2 {
+  border-radius: 25px;
+  border: 1px solid #e7e6e6;
+  padding: 10px;
+  width: 465px;
+  height: 30px;
+}
+</style>
 </head>
 <body>
 <div class="wrap">
@@ -15,7 +23,7 @@
 <div class="content">
     <div class="sidebar"><a href="index.html"><img src="images/logo.png" /></a><br><br>
     	<div class="side">
-            <h3><B>FREE PATTERN MENU</B></h3>
+            <h3><font face="arial black">FREE PATTERN MENU</font></h3>
             <ul>
 				<li><a href="afghan.html">Afghan Patterns</a></li>		 
 				<li><a href="bedspread.html">Bedspread Patterns</a></li>
@@ -23,6 +31,7 @@
                  <li><a href="floral.html">Floral Doily Patterns</a></li>
                 <li><a href="pineapple.html">Pineapple Doily Patterns</a></li>
                 <li><a href="round.html">Round Doily Patterns</a></li>
+				<li><a href="ruffle.html">Ruffle Doily Patterns</a></li>
                 <li><a href="oval.html">Oval Doily Patterns</a></li>
                 <li><a href="tablecloth.html">Tablecloth Patterns</a></li>
                   <li><b><a href="index.html"><font color="#ff0066"><b>->HOME<-</font></a></li>
@@ -33,7 +42,7 @@
    
 		
 	
-<div class="main"><br><center><font face="verdana" size="4" color="red"><B>NEWEST - FREE CROCHET PATTERNS</B></font></center><br>
+<div class="main"><center><font face="Tahoma" color="#8FBC8F" size="5"><p id="rcorners2">Newly Added Free Crochet Patterns</p></font></center>
 
 <div class="grid-view"><div class="prev"><a href="bedspread/daisydell.html"><img src="bedspread/images/daisydellt.jpg" alt="" /></a></div><p><a href="bedspread/daisydell.html">Daisy In The Dell</a></p></div>
 <div class="grid-view"><div class="prev"><a href="bedspread/poin.html"><img src="bedspread/images/point.jpg" alt="" /></a></div><p><a href="bedspread/poin.html">Poinsettia Posy</a></p></div>
