--- a/bedspread.html
+++ b/bedspread.html
@@ -25,13 +25,12 @@
     	<div class="side">
             <h3><font face="arial black">Free Crochet Index</font></h3>
             <ul>
-				<li><a href="afghan.html">Afghan Patterns</a></li>		 
 				<li><a href="bedspread.html"><font color="#ff0066">Bedspread Patterns</a></font></li>
+				<li><a href="round.html">Decorative Doily Patterns</font></a></li>
                 <li><a href="floral.html">Floral Doily Patterns</a></li>
                 <li><a href="pineapple.html">Pineapple Doily Patterns</a></li>
-                <li><a href="round.html">Decorative Doily Patterns</font></a></li>
-                <li><a href="tablecloth.html">Tablecloth Patterns</a></li>
-				<li><a href="index.html">HOME</a></li>
+                <li><a href="ruffle.html">Ruffle Doily Patterns</a></li>
+                <li><a href="index.html">HOME</a></li>
        
             </ul>
         </div>
