--- a/round.html
+++ b/round.html
@@ -5,6 +5,14 @@
 <meta name="keywords" content="free florwer floral crochet patterns" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="css/style.css" rel="stylesheet" type="text/css"  media="all" />
+<style> #rcorners2 {
+  border-radius: 25px;
+  border: 1px solid #e7e6e6;
+  padding: 10px;
+  width: 465px;
+  height: 30px;
+}
+</style>
 </head>
 <body>
 <div class="wrap">
@@ -17,13 +25,13 @@
     	<div class="side">
             <h3><font face="arial black">Free Crochet Index</font></h3>
             <ul>
-				<li><a href="afghan.html">Afghan Patterns</a></li>		 
+						 
 				<li><a href="bedspread.html">Bedspread Patterns</a></li>
+				<li><a href="round.html"><font color="#ff0066"><b>Decorative Doily Patterns</b></font></a></li>
                 <li><a href="floral.html">Floral Doily Patterns</a></li>
                 <li><a href="pineapple.html">Pineapple Doily Patterns</a></li>
-                <li><a href="round.html"><font color="#ff0066"><b>Decorative Doily Patterns</b></font></a></li>
-                <li><a href="tablecloth.html">Tablecloth Patterns</a></li>
-				<li><a href="index.html">HOME</a></li>
+                <li><a href="ruffle.html">Ruffle Doily Patterns</a></li>
+                <li><a href="index.html">HOME</a></li>
        
             </ul>
         </div>
@@ -32,7 +40,7 @@
    
 		
 	
-<div class="main"><br><center><font face="arial black" color="#76769B" size="5"><b>Free Decorative Crochet Patterns</b></font><br><br></center>
+<div class="main"><center><font face="Tahoma" color="#8FBC8F" size="5"><p id="rcorners2">Free Decorative Doily Patterns </p></font></center>
 
 <div class="grid-view"><div class="prev"><a href="round/brocade.html"><img src="round/images/brocadet.jpg" alt="" /></a></div><p><a href="round/brocade.html">Brocade Doily</a></p></div>
 
