--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
        </div>
 
-</p><ins class="epn-placement" data-config-id="600271f33caba2321db51029"></ins>
+<P align="right"><ins class="epn-placement" data-config-id="600271f33caba2321db51029"></ins></p>
         </div>
 		
 						    </div>
