--- a/ruffle/blossom.html
+++ b/ruffle/blossom.html
@@ -3,15 +3,7 @@
 <html><head><title>Blossom Ruffle Doily -  Free Crochet Doily Pattern</title></head>
 <body>
 <center><table width="90%" border="0"><tr><td><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
 <p align="right"><a href="https://drive.google.com/uc?id=1MjcLrpEiB2OoUSt9H9qmSB0bXAf9ZR9K&export=download"><img src="images/blossom.jpg" align="right"  width="400" height="425" border="0"></a></p>
 <font face="trebuchet MS" color="#76769B" size="5"><b>Blossom Ruffle Doily Pattern</b></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b><br>
@@ -149,17 +141,7 @@ cluster st in same loop, ch 4, sl st in top of cluster st just made for picot; c
 for picot, ch 5, sc in next loop, repeat from * 8 times, repeat from ** all around, join, cut thread. 
 
 <br><br>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<br><br>
-<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
