--- a/ruffle/blossom.html
+++ b/ruffle/blossom.html
@@ -141,7 +141,7 @@ cluster st in same loop, ch 4, sl st in top of cluster st just made for picot; c
 for picot, ch 5, sc in next loop, repeat from * 8 times, repeat from ** all around, join, cut thread. 
 
 <br><br>
-<a href="/..index.html"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<a href="doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
 <br><br>
 </font> 
 </td></tr></table></center>
