--- a/bedspread.html
+++ b/bedspread.html
@@ -40,6 +40,10 @@
 	
 	
 <div class="main"><center><font face="Tahoma" color="#8FBC8F" size="5"><p id="rcorners2">Free Crochet Bedspread Patterns</p></font></center>
+
+<div class="grid-view"><div class="prev"><a href="bedspread/pansys.html"><img src="bedspread/images/pansyst.jpg" alt="" /></a></div><p><a href="bedspread/pansys.html">Pansy Spread</a></p></div>
+
+
 <div class="grid-view"><div class="prev"><a href="bedspread/ballerina.html"><img src="bedspread/images/ballerinat.jpg" alt="" /></a></div><p><a href="bedspread/ballerina.html">Ballerina</a></p></div>
 
 <div class="grid-view"><div class="prev"><a href="bedspread/bed.html"><img src="bedspread/images/bedt.jpg" alt="" /></a></div><p><a href="bedspread/bed.html">Bed Of Roses</a></p></div>
@@ -81,7 +85,7 @@
 <!--------------------------------------->
 
     <div class="clear"></div>
-     <br><Br><center><div class="copy">&copy; 2014-2021 doilybox.com. All Rights Reserved | <a href="https://www.doilybox.com/privacy.html">Privacy Policy</a><br><br></center></div>
+     <br><Br><center><div class="copy">&copy; 2014-2021 doilybox.com. All Rights Reserved | <a href="doilybox.com/privacy.html">Privacy Policy</a><br><br></center></div>
 </div>
 </div>
 </body>
