--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   height: 30px;
 }
 </style>
-<script async src="https://epnt.ebay.com/static/epn-smart-tools.js"></script>
+
 </head>
 <body>
 <div class="wrap">
@@ -46,6 +46,8 @@
 	
 <div class="main"><center><font face="Tahoma" color="#8FBC8F" size="5"><p id="rcorners2">Newly Added Free Crochet Patterns</p></font></center>
 
+<div class="grid-view"><div class="prev"><a href="bedspread/pansys.html"><img src="bedspread/images/pansyst.jpg" alt="" /></a></div><p><a href="bedspread/pansys.html">Pansy Spread</a></p></div>
+
 <div class="grid-view"><div class="prev"><a href="bedspread/daisydell.html"><img src="bedspread/images/daisydellt.jpg" alt="" /></a></div><p><a href="bedspread/daisydell.html">Daisy In The Dell</a></p></div>
 <div class="grid-view"><div class="prev"><a href="bedspread/poin.html"><img src="bedspread/images/point.jpg" alt="" /></a></div><p><a href="bedspread/poin.html">Poinsettia Posy</a></p></div>
 <div class="grid-view"><div class="prev"><a href="floral/rosebouquet.html"><img src="floral/images/rosebouquett.jpg" alt="" /></a></div><p><a href="floral/rosebouquet.html">Rose Bouquet</a></p></div>
@@ -58,13 +60,9 @@
 <div class="grid-view"><div class="prev"><a href="round/brocade.html"><img src="round/images/brocadet.jpg" alt="" /></a></div><p><a href="round/brocade.html">Brocade Doily</a></p></div>
 
 
-<div class="grid-view"><div class="prev"><a href="bedspread/daisydell.html"><img src="bedspread/images/daisydellt.jpg" alt="" /></a></div><p><a href="bedspread/daisydell.html">Daisy In The Dell</a></p></div>
-
-
 
        </div>
 
-<P align="right"><ins class="epn-placement" data-config-id="600271f33caba2321db51029"></ins></p>
         </div>
 		
 						    </div>
