--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	
 <div class="main"><center><font face="Tahoma" color="#8FBC8F" size="5"><p id="rcorners2">Newly Added Free Crochet Patterns</p></font></center>
 
-<div class="grid-view"><div class="prev"><a href="bedspread/pansys.html"><img src="bedspread/images/pansyst.jpg" alt="" /></a></div><p><a href="bedspread/pansys.html">Pansy Spread</a></p></div>
+<div class="grid-view"><div class="prev"><a href="bedspread/pansys.html"><img src="bedspread/images/pansys.jpg" alt="" /></a></div><p><a href="bedspread/pansys.html">Pansy Spread</a></p></div>
 
 <div class="grid-view"><div class="prev"><a href="bedspread/daisydell.html"><img src="bedspread/images/daisydellt.jpg" alt="" /></a></div><p><a href="bedspread/daisydell.html">Daisy In The Dell</a></p></div>
 <div class="grid-view"><div class="prev"><a href="bedspread/poin.html"><img src="bedspread/images/point.jpg" alt="" /></a></div><p><a href="bedspread/poin.html">Poinsettia Posy</a></p></div>
