--- a/afghans/ripplingriver.html
+++ b/afghans/ripplingriver.html
@@ -1,107 +1,38 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Rippling River crochet free afghan pattern</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="../
-layout/styles/main.css" rel="stylesheet" type="text/css" media="all">
-<link href="../layout/styles/mediaqueries.css" rel="stylesheet" type="text/css" media="all">
-<!--[if lt IE 9]>
-<link href="../layout/styles/ie/ie8.css" rel="stylesheet" type="text/css" media="all">
-<script src="../layout/scripts/ie/css3-mediaqueries.min.js"></script>
-<script src="../layout/scripts/ie/html5shiv.min.js"></script>
-<![endif]-->
-</head>
-<body class="">
-<div class="wrapper row1">
-  <header id="header" class="full_width clear">
-    <div id="hgroup">
-      
-      <center><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- newfloral -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="1414066940"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 
-</center>
-    </div>
-    <div id="header-contact">
-      <ul class="list none">
-
-      </ul>
-    </div>
-  </header>
-</div>
-<!-- ################################################################################################ -->
-
-<!-- content -->
-<div class="wrapper row3">
-  <div id="container">
-    <!-- ################################################################################################ -->
-    <section class="clear">
-      
-          </tr>
-        </tbody>
-      </table>
-    </section>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html><head><title>Rippling River Afghan Pattern - Free Crochet Cotton Pattern</title></head>
+<body>
+<center><table width="90%" border="0"><tr><td><br>
+<p align="right"><a href="https://drive.google.com/uc?id=1XpIwwkhH1UeFim5ECmYOxX05CxSMYujw&export=download&export=download"><img src="images/ripplingriver.jpg" align="right"  width="400" height="425" border="0"></a></p>
+<font face="trebuchet MS" color="#76769B" size="5"><b> Rippling River Afghan - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b>
+CLARK'S BIG BALL MERCERIZED CROCHET, size 20 
+<br>SINGLE SIZE DOUBLE SIZE 34 balls of White or Ecru. 43 balls of White or Ecru. 
+<br>MILWARD'S STEEL CROCHET HOOK No. 9. 
+<br><b>GAUGE:</b> Each motif measures about 4 1/4 inches square when blocked. For a single size spread about 72 x 106 inches, including edging, make 16 x 24 motifs. For a double size spread, about 90 x 106 inches, including edging, make 20 x 24 motifs. 
+<br><b>FIRST MOTIF:</b> Starting at center, ch 8. Join with sl st. 
+<br><b>1st rnd:</b> Ch 4, 3 tr in ring holding back on hook the last loop of each tr, thread over and draw through all loops on hook, ch 1 to fasten (a 3-tr cluster made), * ch 7, make 4 tr in ring holding back on hook the last loop of each tr, finish cluster. Repeat from * 2 more times; ch 7, sl st in tip of 1st cluster. 
+<br><b>2nd rnd:</b> Ch 4, 3-tr cluster in same place as sl st, * ch 3,-5 ,tr in next ch-7 sp, ch 4, 4-tr cluster in tip of next cluster. Repeat from * around. Join last ch-4 to tip of 1st cluster. 
+<br><b>3rd rnd:</b> Ch 4, 2-tr cluster in same place as sl st, ch 2, 3-tr cluster in same place, * ch 4, tr in next ch-4 sp, tr in next 5 tr, tr in next sp, ch 4, in tip of next cluster make 3-tr cluster, ch 2 and 3-tr cluster. Repeat from * around. Join last ch-4 to tip of 1st cluster. <br><b>4th rnd:</b> Sl st in ch-2 sp, ch 4, 2-tr cluster in same place as last sl st, in same sp make ( ch 2, 3-tr cluster) twice; * ch 3, 5 tr in next ch-4 sp, ch 3, skip 1 tr, tr in next 5 tr holding back on hook the last loop of each tr, finish as for a cluster; ch 3, 5 tr in next ch-4 sp, ch 3, in next corner sp make three 3 -tr clusters with ch-2 between each cluster. Repeat from * around. Join. 
+<br><b>5th rnd:</b> Sl st in next ch-2 sp, ch 4, 2-tr cluster in same place as last sl st, ch 2, 3-tr cluster in same place, * ch 5, in next ch-2 sp make two 3-tr clusters with ch 2 between, ch 3, tr in next sp, tr in next 5 tr, tr in next sp, ch 3, tr in tip of next cluster, ch 3, tr in next sp, tr in next 5 tr, tr in next sp, ch 3, in next ch-2 sp make two 3-tr clusters with ch-2 between. Repeat from * around. Join. 
+<br><b>6th rnd:</b> Sl st in next ch-2 sp, ch 4, 2-tr cluster in same place as sl st, ch 2, 3 -tr cluster in same place, * ch 2, in next ch-2 sp make 3-tr cluster, ch 5 and 3-tr cluster; ch 2, in next ch-2 sp make two 3-tr clusters with ch-2 between, ch 5, skip 1 tr, tr in next 5 tr holding the last loop of each tr on hook, finish as for a cluster; ch 8, skip 1 tr, and ch 3, sc in next tr, ch 8, skip ch-3 and 1 tr, 5-tr cluster over next 5 tr, ch 5, in next ch-2 sp make two 3-tr clusters with ch-2 between. Repeat from * around. Join. Fasten off. 
+<br><b>SECOND MOTIF:</b> Work first 5 rnds as for First Motif. 
+<br><b>6th rnd:</b> Sl st in next ch-2 sp, ch 4, 2-tr cluster in same place as sl st, ch 2, 3-tr cluster in same place, ch 2, 3-tr cluster in next sp, ch 2, sl st in corresponding sp of First Motif, ch 2, 3 -tr cluster back in same place as last cluster on Second Motif, ch 2, in next ch-2 sp make two 3-tr clusters with ch-2 between, ch 5, skip 1 tr, 5 -tr cluster over next 5 tr, ch 4, sl st in corre-sponding sp on First Motif, ch 4, skip next tr and ch 4, sc back in next tr on Second Motif. Join the next loop in the same way. Continue as for 6th rnd of First Motif, joining next corner to First Motif as previous corner was joined. Complete rnd as for First Motif. Make necessary number of motifs, joining adjacent sides as Second Motif was joined to First ( whenever 4 corners meet, join 3rd and 4th corners to joining of other corners). 
+<br><b>EDGING: 1st rnd:</b> Attach thread to tip of 1st cluster on corner motif following a joining, ch 8, tr in tip of next cluster, (ch 4, tr in tip of next cluster) twice, ( ch 4, tr in next sp) twice, ( ch 4, tr in tip of next cluster) 4 times; ch 4, in center st of corner sp make tr, ch 5 and tr; * ( ch 4, tr in tip of next cluster) 4 times, ( ch 4, tr in next sp) twice, ( ch 4, tr in next cluster) 4 times; ch 4, tr in joining. Repeat from * around, turning corners as 1st corner was turned and joining last ch-4 to 4th st of ch-8 first made. 
+<br><b>2nd and 3rd rnds:</b> Ch 8, * tr in next tr, ch 4. Repeat from * around, making tr, ch-5 and tr in center st of each corner sp. Join as before. 
+<br><b>4th rnd:</b> Ch 4, a 3-tr cluster in same place as sl st, * ch 4, a 4 tr-cluster in next tr. Repeat from * around, making an extra ch-4 and cluster in center st of each corner sp. Join to tip of 1st cluster made. 
+<br><b>5th rnd:</b> Ch 4, 4 tr in same place as sl st, * ch 4, sc in tip of next cluster, ch 4, 5 tr in tip of next cluster. Repeat from * to corner cluster, ch 4, sc in next sp, ch 4, 5 tr in tip of corner cluster, ch 4, sc in next sp, ch 4, 5 tr in tip of next cluster, ch 4, sc in tip of next cluster and continue thus around. Join to 4th st of ch-4 first made. 
+<br><b>6th rnd:</b> Ch 4, a 2 tr-cluster in same place as sl st, * ch 5, skip 1 tr, make a 3-tr cluster in next tr, ch 5, make a 3-tr cluster in each of next 2 tr. Repeat from * around. Join and fasten off. Block to measurements given. 
 
 
+<br><br>
+<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<br><br>
 
-<p align="right"><font face="trebuchet MS" color="#76769B" size="4">Click image for a larger view</font><br><a href="images/ripplingriverlarge.jpg" target="new"><img src="images/ripplingriver.jpg" align="right" width="300" height="300"></a></p>
+</font> 
+</td></tr></table></center>
+</body></html>
 
 
 
 
-
-<h1><b>Rippling River - Free Afghan Pattern</b></h1>
-
-<font face="verdana" size="2"><b>MATERIALS:</b><br>
- 
-Easy to make in one piece, with no sewing together, in simple single crochet. 
-COATS & CLARK'S "RED HEART" KNITTING WORSTED, 4 Ply (4 oz. "Tangle-Proof" Pull-Out Skeins): 11 skeins of No. 717 Salmon, 4 skeins of No. 283 Dk. Rust and 3 skeins of No. 12 Black. 
-Crochet Hook Size H. Afghan measures 46 x 70 inches 
-<br><b>GAUGE:</b> 4 sts = 1 inch; 15 rows (down center of a point) = 5 inches. With Salmon, <b>ch 245</b> (4 ch sts to 1 inch). 
-<br><b>1st row:</b> Sc in 2nd ch from hook and in next 18 ch, (3 sc in next ch, sc in next 19 ch, skip next 2 ch, sc in next 19 ch) 5 times; 3 sc in next ch, sc in remaining 19 ch. Ch 1, turn. 
-
-<br><br>Pick up back loop only of each sc throughout. <br>
-
-<br><b>2nd row:</b> Skip first sc, (sc in next 19 sc, 3 sc in next sc, sc in next 19 sc, skip next 2 sc) 5 times; sc in next 19 sc, 3 sc in next sc, sc in next 18 sc, skip next sc, sc in last sc. Ch 1, turn. 
- 
-<br><b>3rd through 8th row:</b> Repeat 2nd row. Do not ch 1 at end of 8th row. Drop Salmon, attach Black, ch 1, turn. 
-<br><b>9th row:</b> Sc in first sc, * (make an sc in the sc directly below next sc of next-to-last row long sc made; skip the sc covered by the long sc, sc in next sc) 9 times; make a long sc over next sc as before, skip the covered sc, sc in next st, long sc in same place where last long sc was made point made; (skip the covered sc, sc in next sc, long sc over next st) 9 times; skip the covered sc, sc in next 2 sc. Repeat from * across, ending with sc in last sc. Ch 1, turn. 
-
-<br><b>10th row:</b> With Black, repeat 8th row. Break off and fasten Black. Pick up Salmon, ch 1, turn. 
-<br><b>11 th and 12th rows:</b> Repeat 2nd and 8th rows. Break off and fasten Salmon. Attach Rust, ch 1, turn. 
-
-<br><b>13th row:</b> With Rust, repeat 9th row. Next 5 rows: Repeat 2nd row 4 times, then repeat 8th row once. At end of last row break off and fasten Rust. Attach Salmon, ch 1, turn. 
-
-<br><b>19th and 20th rows:</b> Repeat 9th and 8th rows. Drop Salmon, attach Black, ch 1, turn. <br><b>21st and 22nd rows:</b> Repeat 9th and 8th rows. Break off and fasten Black. Pick up Salmon, ch 1, turn. 
-<br><b>23rd through 37th row:</b> Repeat 2nd row. 
-<br><b>38th row:</b> Repeat 8th row. Repeat last 30 rows (9th through 38th row) 5 times more, then work 9th through 30th row once. Break off and fasten. Block to measurements. 
-
-<br><b>Edging: 1st row:</b> With right side facing, using Salmon, sc closely along one long edge. Turn. 2nd row: With wrong side facing, sl st in each sc of previous row. Break off and fasten. Work edging along opposite long edge. 
-<br><br><a href="http://www.doilybox.com">Home</a>
-
-<br><br><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- newfloral -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="1414066940"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-    <!-- ################################################################################################ -->
-    <div class="clear"></div>
-  </div>
-</div>
-<!-- Footer --><br><br>
-
-
-</body>
-</html>
