--- a/afghans/shells.html
+++ b/afghans/shells.html
@@ -1,73 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Cockleshells - Free Crochet Afghan Pattern doilybox.com</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="../
-layout/styles/main.css" rel="stylesheet" type="text/css" media="all">
-<link href="../layout/styles/mediaqueries.css" rel="stylesheet" type="text/css" media="all">
-<!--[if lt IE 9]>
-<link href="../layout/styles/ie/ie8.css" rel="stylesheet" type="text/css" media="all">
-<script src="../layout/scripts/ie/css3-mediaqueries.min.js"></script>
-<script src="../layout/scripts/ie/html5shiv.min.js"></script>
-<![endif]-->
-</head>
-<body class="">
-<div class="wrapper row1">
-  <header id="header" class="full_width clear">
-    <div id="hgroup">
-      
-      <center>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-</center>
-    </div>
-    <div id="header-contact">
-      <ul class="list none">
 
-      </ul>
-    </div>
-  </header>
-</div>
-<!-- ################################################################################################ -->
-
-<!-- content -->
-<div class="wrapper row3">
-  <div id="container">
-    <!-- ################################################################################################ -->
-    <section class="clear">
-      
-          </tr>
-        </tbody>
-      </table>
-    </section>
-
-
-
-<p align="right"><font face="trebuchet MS" color="#76769B" size="4">Click image for a larger view</font><br><a href="images/shelllarge.jpg" target="new"><img src="images/shell.jpg" align="right" width="300" height="300"></a></p>
-
-
-
-
-
-<h1><b>Cockleshells - Free Crochet Afthan Pattern</b></h1>
-
-
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html><head><title>Cockleshells Afghan Pattern - Free Crochet Cotton Pattern</title></head>
+<body>
+<center><table width="90%" border="0"><tr><td><br>
+<p align="right"><a href="https://drive.google.com/uc?id=1TiyoNLhrVf3pwiLnwD3IA-pXfq37UyCu&export=download&export=download"><img src="images/shell.jpg" align="right"  width="400" height="425" border="0"></a></p>
+<font face="trebuchet MS" color="#76769B" size="5"><b> Cockleshells Afghan - Free Crochet Pattern</b></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-
-
-
-
-
-Crocheted in popular shell stitch, this pretty afghan is worked in one piece, and is reversible. <br>
+<br>
 COATS & CLARK'S "RED HEART" KNITTING WORSTED, 4 Ply (4 oz. "Tangle-Proof" Pull-Out Skeins): 9 skeins of No. 1 White; 4 skeins each of No. 760 Wine Rose and No. 835 Periwinkle. <br>Crochet Hook Size H. <br>Afghan measures 45 x 62 inches 
 <br><b>GAUGE:</b> 2 sc and 2 shells = 2 1/2 inches; 2 rnds = 1 inch. <br><br>Starting at center with White, ch 115 to measure 23 inches. 
 <br><b>1st rnd:</b> Sc in 3rd ch from hook, (ch 1, sc in next ch) twice; sc in next 108 ch, (ch 1, sc in next ch) twice; working along opposite side of starting chain, ch 1, sc in same ch as last sc, (ch 1, sc in next ch) twice; sc in next 108 ch, (ch 1, sc in next ch) twice. Join with sl st to first ch-2 sp. 
@@ -82,26 +21,17 @@ COATS & CLARK'S "RED HEART" KNITTING WORSTED, 4 Ply (4 oz. "Tangle-Proof" Pull-O
 <br><b>8th rnd:</b> Attach Periwinkle to last joining, ch 3, complete a starting shell in same place, * sc in each shell, shell in each sc to within first sp of next inc shell, work a corner, same as on 4th rnd, in sps of inc shell. Repeat from * 3 more times; shell in each sc, sc in each shell to end of rnd. Join, break off and fasten. Turn. Repeat 5th through 8th rnd 10 more times; then repeat 5th and 6th rnds once more. Break off and fasten. Block to measurements. 
 
 
-<br><br><a href="http://www.doilybox.com">Home</a>
+
+
 
 <br><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- floraldoilies -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="6013841250"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<br><br>
+
+</font> 
+</td></tr></table></center>
+</body></html>
 
 
-    <!-- ################################################################################################ -->
-    <div class="clear"></div>
-  </div>
-</div>
-<!-- Footer --><br><br>
 
 
-</body>
-</html>
