--- a/afghans/color.html
+++ b/afghans/color.html
@@ -1,61 +1,23 @@
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-
-<html><head>
-
-<title>Free Crochet - Daffodil Doily Pattern</title>
-
-</head>
+<html><head><title>Granny's Garden Afghan Pattern - Free Crochet Cotton Pattern</title></head>
 <body>
-<center>
-<table width="80%" height="100%" border="0" cellpadding="50" bgcolor="white">
-<tr><td>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
-<!-- doilylinks -->
-
-<ins class="adsbygoogle"
-
-     style="display:inline-block;width:728px;height:15px"
-
-     data-ad-client="ca-pub-7162871844388187"
-
-     data-ad-slot="5009629351"></ins>
-
-<script>
-
-(adsbygoogle = window.adsbygoogle || []).push({});
-
-</script><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- meme -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:468px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="9746437906"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
-<p align="right"><font face="trebuchet MS" color="#76769B" size="4">Click image for a larger view</font><br><a href="images/colorlarge.jpg" target="new"><img src="images/color.jpg" align="right"  width="300" height="300"></a></p>
-
-<font face="trebuchet MS" color="#76769B" size="5"><b>The Big Colorful Throw Crochet Pattern</b></font><br><br>
-
+<center><table width="90%" border="0"><tr><td><br>
+<p align="right"><a href="https://drive.google.com/uc?id=1IOnP_prfQ-C-5XVNmKAjaY_nENkJWU5k&export=download&export=download">
+<img src="images/color.jpg" align="right"  width="400" height="425" border="0"></a></p>
+<font face="trebuchet MS" color="#76769B" size="5"><b> The Big Colorful Throw Afghan - Free Crochet Pattern</b></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-
-AMERICAN THREAD "AUNT LYDIA'S"
-HEAVY RUG YARN 
-1—70 yd. skein Yellow
-2—70 yd. skeinschartreuse 
-4—70 yd. skeins Orange 
-12—70 yd. skeins White 
-24—70 yd. skeins assortedcolors 
+<br>
+AMERICAN THREAD "AUNT LYDIA'S" HEAVY RUG YARN 
+<br>1-70 yd. skein Yellow
+<br>2-70 yd. skeinschartreuse 
+<br>4-70 yd. skeins Orange 
+<br>12-70 yd. skeins White 
+<br>24-70 yd. skeins assortedcolors 
 and
-"AUNT LYDIA'S" CARPET AND
-BUTTON THREAD
-1 spool White
-Aluminum Crochet Hook Size H OR ANY SIZE HOOK WHICH WILL RESULT IN STITCH GAUGE BELOW
-
-GAUGE: 3 dc = 1 inch
-
+<br>"AUNT LYDIA'S" CARPET AND BUTTON THREAD 1 spool White
+<br>Aluminum Crochet Hook Size H OR ANY SIZE HOOK WHICH WILL RESULT IN STITCH GAUGE BELOW
+<br><b>GAUGE:</b> 3 dc = 1 inch
 <br><b>MOTIF:</b> With Yellow ch 4, join to form a ring. 
 <br><b>1st Rnd:</b> Ch 1, work 8 sc in ring, join in 1st sc, cut yarn. 
 <br><b>2nd Rnd:</b> Attach Orange in same st, ch 3, 4 dc in same st, drop loop from hook, insert hook in 3rd st of ch, pick up dropped loop and pull through, * ch 2, 5 dc in next sc, drop loop, insert hook in 1st dc, pick up loop and pull through (popcorn st), repeat from * 6 times, ch 2, join in top of 1st popcorn st, cut Orange. 
@@ -75,45 +37,26 @@ JOINING MOTIFS:</b> With Yellow work 1st Rnd colors same as Motif.
 
 <br><b>FINISHING:</b> Sew motifs tog through back loops of sts, and sew joining motifs in each space as illustrated.
 
-<br><b>POMPONS:</b> Open skein of White, cut one end. Cut Carpet and But­ton Thread into 18 inch lengths, fold thread in half, and tie skein tightly at 1 inch intervals. Cut between tying. Shape and trim pompons. Attach 1 pompon to each point of all motifs and tie 2 pompons spaced evenly between all points.
+<br><b>POMPONS:</b> Open skein of White, cut one end. Cut Carpet and ButÂ­ton Thread into 18 inch lengths, fold thread in half, and tie skein tightly at 1 inch intervals. Cut between tying. Shape and trim pompons. Attach 1 pompon to each point of all motifs and tie 2 pompons spaced evenly between all points.
 <br><b>
 PILLOWS
 
 <br>Materials Required:</b> 
 <br>AMERICAN THREAD "AUNT LYDIA'S"
 HEAVY RUG YARN
-<br>1—70 yd. skein each Orange and Yellow
-<br>2—70 yd. skeins White
-<br>8—70 yd. skeins assortedcolors will make 4 pillows 
+<br>1â€”70 yd. skein each Orange and Yellow
+<br>2â€”70 yd. skeins White
+<br>8â€”70 yd. skeins assortedcolors will make 4 pillows 
 <br>Kapok or shredded foam rubber
 <br><br>
-Work 2 motifs of any 2 main col­ors same as bedspread. Sew motifs tog leaving an opening. Fill with kapok or shredded foam rubber. Sew opening closed. Fin­ish with pompons or if desired omit pompons.
+Work 2 motifs of any 2 main colÂ­ors same as bedspread. Sew motifs tog leaving an opening. Fill with kapok or shredded foam rubber. Sew opening closed. Finish with pompons or if desired omit pompons.
 <br><br>
-<b>NOTE:</b> I think you could use any yarn if you modify the pattern a little and just add more crochet blocks or add extra rows. 
-<br><br>
-
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- crochet stuff -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5410888958"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
-<br><br>
-
 <a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<br><br>
 
-</td></tr>
-</table>
-
-</center>
-</body>
-
-</html>
-
+</font> 
+</td></tr></table></center>
+</body></html>
 
 
 
