--- a/afghans/ggarden.html
+++ b/afghans/ggarden.html
@@ -1,69 +1,14 @@
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-
-<html>
-<head>
-<title>Grandmothers Garden crochet free afghan pattern</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="../
-layout/styles/main.css" rel="stylesheet" type="text/css" media="all">
-<link href="../layout/styles/mediaqueries.css" rel="stylesheet" type="text/css" media="all">
-<!--[if lt IE 9]>
-<link href="../layout/styles/ie/ie8.css" rel="stylesheet" type="text/css" media="all">
-<script src="../layout/scripts/ie/css3-mediaqueries.min.js"></script>
-<script src="../layout/scripts/ie/html5shiv.min.js"></script>
-<![endif]-->
-</head>
-<body class="">
-<div class="wrapper row1">
-  <header id="header" class="full_width clear">
-    <div id="hgroup">
-      
-      <center><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- newfloral -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="1414066940"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
-</center>
-    </div>
-    <div id="header-contact">
-      <ul class="list none">
-
-      </ul>
-    </div>
-  </header>
-</div>
-<!-- ################################################################################################ -->
-
-<!-- content -->
-<div class="wrapper row3">
-  <div id="container">
-    <!-- ################################################################################################ -->
-    <section class="clear">
-      
-          </tr>
-        </tbody>
-      </table>
-    </section>
-
-
-
-<p align="right"><font face="trebuchet MS" color="#76769B" size="4">Click image for a larger view</font><br><a href="images/ggardenlarge.jpg" target="new"><img src="images/ggarden.jpg" align="right" width="300" height="600"></a></p>
-
-
-
-
-
-<font face="trebuchet MS" color="#76769B" size="5"><b>Grandmothers Garden Free Crochet Afghan Pattern</b></font><br><br>
-
+<html><head><title>Granny's Garden Afghan Pattern - Free Crochet Cotton Pattern</title></head>
+<body>
+<center><table width="90%" border="0"><tr><td><br>
+<p align="right"><a href="https://drive.google.com/uc?id=1SzAGTmbBSxchR4uvIj4DRo2MNlKuXCak&export=download&export=download">
+<img src="images/ggarden.jpg" align="right"  width="400" height="425" border="0"></a></p>
+<font face="trebuchet MS" color="#76769B" size="5"><b> Granny's Garden Afghan - Free Crochet Pattern</b></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-
-COATS & CLARK'S RED HEART  KNITTING WORSTED, 4 Ply ("Tangle-Proof" Pull-Out Skeins): 52 ounces of No. 588 Amethyst and 14 ounces each of No. 758  Mid Rose and No. 722 Lt. Pink. 
+<br>
+COATS & CLARK'S RED HEART KNITTING WORSTED, 4 Ply ("Tangle-Proof" Pull-Out Skeins): 52 ounces of No. 588 Amethyst and 14 ounces each of No. 758 Mid Rose and No. 722 Lt. Pink.
 <br>Crochet Hook, Size G. 
 <br>Afghan measures 57 x 77 inches each motif measures 2 1/2 inches square. <br>
 Always be sure to check your gauge before starting afghan. Use any size hook which will obtain the motif measurement above. 
@@ -107,23 +52,16 @@ skip next 3 dc, (ch 1, 3 dc in next ch-1 sp) twice. Repeat from ** across to nex
 <br><b>Fourth Motif Band:</b> Joining 76 motifs, work as for First Motif Band. 
 <br><b>FIFTH BORDER</b> Repeat Third Border. Block to measurements. 
 
-<br><br><a href="http://www.doilybox.com">Home</a>
+<br><br>
+<img src="images/ggarden2.jpg" width="350" height="350" border="0">
+<br><br>
+<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<br><br>
 
-<br><br><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- newfloral -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="1414066940"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-    <!-- ################################################################################################ -->
-    <div class="clear"></div>
-  </div>
-</div>
-<!-- Footer --><br><br>
+</font> 
+</td></tr></table></center>
+</body></html>
 
 
-</body>
-</html>
+
+
