--- a/afghans/houndstooth.html
+++ b/afghans/houndstooth.html
@@ -1,69 +1,13 @@
 
-<!DOCTYPE html>
-<html>
-<head>
-<title>Houndstooth crochet free afghan pattern</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="../
-layout/styles/main.css" rel="stylesheet" type="text/css" media="all">
-<link href="../layout/styles/mediaqueries.css" rel="stylesheet" type="text/css" media="all">
-<!--[if lt IE 9]>
-<link href="../layout/styles/ie/ie8.css" rel="stylesheet" type="text/css" media="all">
-<script src="../layout/scripts/ie/css3-mediaqueries.min.js"></script>
-<script src="../layout/scripts/ie/html5shiv.min.js"></script>
-<![endif]-->
-</head>
-<body class="">
-<div class="wrapper row1">
-  <header id="header" class="full_width clear">
-    <div id="hgroup">
-      
-      <center><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- newfloral -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="1414066940"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
-</center>
-    </div>
-    <div id="header-contact">
-      <ul class="list none">
-
-      </ul>
-    </div>
-  </header>
-</div>
-<!-- ################################################################################################ -->
-
-<!-- content -->
-<div class="wrapper row3">
-  <div id="container">
-    <!-- ################################################################################################ -->
-    <section class="clear">
-      
-          </tr>
-        </tbody>
-      </table>
-    </section>
-
-
-
-<p align="right"><font face="trebuchet MS" color="#76769B" size="4">Click image for a larger view</font><br><a href="images/houndstoothlarge.jpg" target="new"><img src="images/houndstooth.jpg" align="right" width="300" height="300"></a></p>
-
-
-
-
-
-<font face="trebuchet MS" color="#76769B" size="5"><b>Houndstooth Free Crochet Afghan Pattern</b></font><br><br>
-
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html><head><title>Houndstooth Afghan Pattern - Free Crochet Cotton Pattern</title></head>
+<body>
+<center><table width="90%" border="0"><tr><td><br>
+<p align="right"><a href="https://drive.google.com/uc?id=1RsBdWILUfHuRA9QaTev7_TgFTLmKBKVG&export=download&export=download"><img src="images/houndstooth.jpg" align="right"  width="400" height="425" border="0"></a></p>
+<font face="trebuchet MS" color="#76769B" size="5"><b>Houndstooth Afghan - Free Crochet Pattern</b></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
+<br>
 
-COATS & CLARK'S RED HEART  KNITTING WORSTED, 4 Ply ("Tangle-Proof" Pull-Out Skeins): 24 ounces each of No. 679 Nile Green and No. 686 Paddy Green. <br>
 Crochet Hook, Size K. 
 <br>Afghan measures 50 x 63 inches. 
 <br><b>GAUGE: 8 group sts = 7 inches; 2 rows = 1 inch.</b> Be sure to check your gauge before starting afghan. Use any size hook which will obtain the stitch gauge above. Starting at narrow edge with Paddy Green, ch 122, having 2 ch sts to 1 inch. 
@@ -74,25 +18,20 @@ Crochet Hook, Size K.
 <br><b>3rd row:</b> With Paddy Green, repeat 2nd row. <br>Repeat 2nd and 3rd rows alternately until total length is 62 inches, ending with a Paddy Green row. Do not change color at end of last row. Break off Nile Green and fasten. 
 
 <br><b>Edging:</b> With Paddy Green make 2 sc in same sc where last sc was made, work-ing along side edge, make a group st in end st of every Paddy Green row, ending with sl st in first ch of starting chain. Break off and fasten. With right side facing and working along opposite side edge, attach Paddy Green to last ch of starting chain and work to corre-spond with opposite side, ending with sc in same place where first sc of last row was made. Do not break off. 
-<br><b>BORDER</bL Making 3 sc in next sc and at each corner, sc evenly around entire outer edge. Join with sl st to first sc. Break off and fasten. Block to measurements. 
-
-<br><br><a href="http://www.doilybox.com">Home</a>
-
-<br><br><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- newfloral -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="1414066940"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-    <!-- ################################################################################################ -->
-    <div class="clear"></div>
-  </div>
-</div>
-<!-- Footer --><br><br>
+<br><b>BORDER</b> Making 3 sc in next sc and at each corner, sc evenly around entire outer edge. Join with sl st to first sc. Break off and fasten. Block to measurements. 
+<br><br>
+<img src="images/houndstooth2.jpg" width="350" height="350">
 
 
-</body>
-</html>
+
+<br><br>
+<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<br><br>
+
+</font> 
+</td></tr></table></center>
+</body></html>
+
+
+
+
