--- a/afghans/roseinbloom.html
+++ b/afghans/roseinbloom.html
@@ -1,70 +1,17 @@
 
-<!DOCTYPE html>
-<html>
-<head>
-<title>Rose In Bloom crochet free afghan pattern</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="../
-layout/styles/main.css" rel="stylesheet" type="text/css" media="all">
-<link href="../layout/styles/mediaqueries.css" rel="stylesheet" type="text/css" media="all">
-<!--[if lt IE 9]>
-<link href="../layout/styles/ie/ie8.css" rel="stylesheet" type="text/css" media="all">
-<script src="../layout/scripts/ie/css3-mediaqueries.min.js"></script>
-<script src="../layout/scripts/ie/html5shiv.min.js"></script>
-<![endif]-->
-</head>
-<body class="">
-<div class="wrapper row1">
-  <header id="header" class="full_width clear">
-    <div id="hgroup">
-      
-      <center><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- newfloral -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="1414066940"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
-</center>
-    </div>
-    <div id="header-contact">
-      <ul class="list none">
-
-      </ul>
-    </div>
-  </header>
-</div>
-<!-- ################################################################################################ -->
-
-<!-- content -->
-<div class="wrapper row3">
-  <div id="container">
-    <!-- ################################################################################################ -->
-    <section class="clear">
-      
-          </tr>
-        </tbody>
-      </table>
-    </section>
-
-
-
-<p align="right"><font face="trebuchet MS" color="#76769B" size="4">Click image for a larger view</font><br><a href="images/roseinbloomlarge.jpg" target="new"><img src="images/roseinbloom.jpg" align="right" width="300" height="300"></a></p>
-
-
-
-
-
-<font face="trebuchet MS" color="#76769B" size="5"><b>Rose In Bloom Afghan Pattern</b></font><br><br>
-
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html><head><title>Rose in Bloom Afghan Pattern - Free Crochet Cotton Pattern</title></head>
+<body>
+<center><table width="90%" border="0"><tr><td><br>
+<p align="right"><a href="https://drive.google.com/uc?id=1Dd0D_lw3kKvMD2nNNLngi06TM1ZY4odp&export=download&export=download">
+<img src="images/roseinbloom.jpg" align="right"  width="400" height="425" border="0"></a></p>
+<font face="trebuchet MS" color="#76769B" size="5"><b> Rose In Bloom Afghan - Free Crochet Pattern</b></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-COATS & CLARK'S RED HEART KNITTING WORSTED, 4 Ply ("Tangle-Proof" Pull-Out Skeins): 32 ounces of No. 588 Amethyst; 30 ounces of No. 990 Roses and 14 ounces of No. 649 Olive Green. 
+<br>
+COATS & CLARK'S RED HEART KNITTING WORSTED, 4 Ply ("Tangle-Proof" Pull-Out Skeins): 32 ounces of No. 588 Amethyst; 30 ounces of No. 990 Roses and 14 ounces of No. 649 Olive Green.
+Crochet Hook, Size G.
 <br>Crochet Hook, Size G. 
-<BR><BR>
+<BR>
 Afghan measures 51 x 73 inches.<br> Motif measures 7 1/4 inches square.<br>
 Be sure to check your gauge before starting afghan. Use any size hook which will obtain the motif measurements above. 
 <br><b>MOTIF</b> (Make 70) Starting at center with Roses, ch 6. Join with sl st to form ring. <br><b>1st rnd:</b> In ring make (sc, ch 5) 8 times. Do not join. 
@@ -80,24 +27,16 @@ Be sure to check your gauge before starting afghan. Use any size hook which will
 
 <br><b>9th rnd:</b> Ch 3, * dc in each dc across to within next ch-3 sp, in sp make 3 dc, ch 3 and 3 dc. Repeat from * around. Join. Break off and fasten. Block to measurements. Using Amethyst and picking up the back loop only of each dc and each ch (front loops remain free on right side), sew 7 x 10 motifs neatly together. 
 <br><b>Edging:</b> Attach Amethyst to dc preceding any of the 4 corner sps, ch 3, making 3 dc, ch 3 and 3 dc in each of the 4 corner sps, dc evenly around entire outer edge. Join to top of ch-3. Break off and fasten. 
+<br><br>
+<img src="images/roseinbloom2.jpg" width="350" height="350">
+<br><br>
+<a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<br><br>
 
-<br><br><a href="http://www.doilybox.com">Home</a>
-
-<br><br><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- newfloral -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="1414066940"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-    <!-- ################################################################################################ -->
-    <div class="clear"></div>
-  </div>
-</div>
-<!-- Footer --><br><br>
+</font> 
+</td></tr></table></center>
+</body></html>
 
 
-</body>
-</html>
+
+
