--- a/bedspread.html
+++ b/bedspread.html
@@ -25,8 +25,9 @@
     	<div class="side">
             <h3><font face="arial black">Free Crochet Index</font></h3>
             <ul>
-				<li><a href="bedspread.html"><font color="#ff0066">Bedspread Patterns</a></font></li>
-				<li><a href="round.html">Decorative Doily Patterns</font></a></li>
+		 <li><a href="afghan.html">Afghan Patterns</font></a></li>
+		<li><a href="bedspread.html"><font color="#ff0066">Bedspread Patterns</a></font></li>
+		<li><a href="round.html">Decorative Doily Patterns</font></a></li>
                 <li><a href="floral.html">Floral Doily Patterns</a></li>
                 <li><a href="pineapple.html">Pineapple Doily Patterns</a></li>
                 <li><a href="ruffle.html">Ruffle Doily Patterns</a></li>
