--- a/floral.html
+++ b/floral.html
@@ -25,10 +25,10 @@
     	<div class="side">
             <h3>Free Crochet Index</h3>
             <ul>
-						 
-				<li><a href="bedspread.html">Bedspread Patterns</a></li>
-				<li><a href="round.html">Decorative Doily Patterns</a></li>
-                 <li><a href="floral.html"><font color="#ff0066"><b>Floral Doily Patterns</b></font></a></li>
+		<li><a href="afghan.html">Afghan Patterns</a></li>
+		<li><a href="bedspread.html">Bedspread Patterns</a></li>
+		<li><a href="round.html">Decorative Doily Patterns</a></li>
+                <li><a href="floral.html"><font color="#ff0066"><b>Floral Doily Patterns</b></font></a></li>
                 <li><a href="pineapple.html">Pineapple Doily Patterns</a></li>
                 <li><a href="ruffle.html">Ruffle Doily Patterns</a></li>
                 <li><a href="index.html">HOME</a></li>
