--- a/round.html
+++ b/round.html
@@ -25,9 +25,9 @@
     	<div class="side">
             <h3><font face="arial black">Free Crochet Index</font></h3>
             <ul>
-						 
-				<li><a href="bedspread.html">Bedspread Patterns</a></li>
-				<li><a href="round.html"><font color="#ff0066"><b>Decorative Doily Patterns</b></font></a></li>
+		<li><a href="afghan.html">Afghan Patterns</a></li>				 
+		<li><a href="bedspread.html">Bedspread Patterns</a></li>
+		<li><a href="round.html"><font color="#ff0066"><b>Decorative Doily Patterns</b></font></a></li>
                 <li><a href="floral.html">Floral Doily Patterns</a></li>
                 <li><a href="pineapple.html">Pineapple Doily Patterns</a></li>
                 <li><a href="ruffle.html">Ruffle Doily Patterns</a></li>
