--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
     	<div class="side">
             <h3><font face="arial black">FREE PATTERN MENU</font></h3>
             <ul>
-						 
-				<li><a href="bedspread.html">Bedspread Patterns</a></li>
-				 <li><a href="round.html">Decorative Doily Patterns</a></li>
-				<li><a href="floral.html">Floral Doily Patterns</a></li>
+		<li><a href="afghan.html">Afghan Patterns</a></li>
+		<li><a href="bedspread.html">Bedspread Patterns</a></li>
+		<li><a href="round.html">Decorative Doily Patterns</a></li>
+		<li><a href="floral.html">Floral Doily Patterns</a></li>
                 <li><a href="pineapple.html">Pineapple Doily Patterns</a></li>
-               <li><a href="ruffle.html">Ruffle Doily Patterns</a></li>
-                
-                  <li><b><a href="index.html"><font color="#ff0066"><b>->HOME<-</font></a></li>
+                <li><a href="ruffle.html">Ruffle Doily Patterns</a></li>
+                <li><b><a href="index.html"><font color="#ff0066"><b>->HOME<-</font></a></li>
             </ul>
         </div>
 		
