--- a/tablecloths/meadow.html
+++ b/tablecloths/meadow.html
@@ -1,41 +1,17 @@
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head>
-<title>Free Crochet - Pineapple Prism Doily Pattern</title>
-</head>
+<html><head><title>Meadowsweet Tablecloth  - Free Crochet Cotton Pattern</title></head>
 <body>
-<center>
-<table width="90%" height="100%" border="0" cellpadding="50" bgcolor="white">
-<tr><td>
+<center><table width="90%" border="0"><tr><td><br>
 
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- meme -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:468px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="9746437906"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
-<p align="right"><font face="trebuchet MS" color="#76769B" size="4">Click image for a larger view</font><br><a href="images/medowsweetlarge.jpg" target="new"><img src="images/medowsweet.jpg" align="right"  width="300" height="300"></a></p>
-
-
-<font face="trebuchet MS" color="#76769B" size="5"><b>Meadowsweet Tablecloth Free Pattern</b></font><br><br>
+<p align="right"><a href="https://drive.google.com/uc?id=1XRPeCXsV4tS4HtbBIjJuuVLQUIKqNQFm&export=download&export=download"><img src="images/medowsweet.jpg" align="right"  width="400" height="425" border="0"></a></p>
+<font face="trebuchet MS" color="#76769B" size="5"><b>Meadowsweet Tablecloth - Free Crochet Pattern</b></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-J. & P. COATS BEST SIX CORD MERCERIZED CROCHET, Art. A.105, Size 20: 27 balls of No. 1 White or No. 61 Ecru for Small Cloth; 36 balls for Large Cloth; <br>or<br> CLARK'S "BIG BALL" MERCERIZED CROCHET, Art. B.34, Size 20: 29 balls of No. 1 White, No. 61 Ecru or No. 42 Cream for Small Cloth; 39 balls for Large Cloth; <br>or<br> CLARK'S "BIG BALL" MERCERIZED CROCHET, Art. B.345, Size 20: 20 balls of No. 1 White or No. 61 Ecru for Small Cloth; 26 balls for Large Cloth. <br>
+
+<br>J. & P. COATS BEST SIX CORD MERCERIZED CROCHET, Art. A.105, Size 20: 27 balls of No. 1 White or No. 61 Ecru for Small Cloth; 36 balls for Large Cloth; <br>or<br> CLARK'S "BIG BALL" MERCERIZED CROCHET, Art. B.34, Size 20: 29 balls of No. 1 White, No. 61 Ecru or No. 42 Cream for Small Cloth; 39 balls for Large Cloth; <br>or<br> CLARK'S "BIG BALL" MERCERIZED CROCHET, Art. B.345, Size 20: 20 balls of No. 1 White or No. 61 Ecru for Small Cloth; 26 balls for Large Cloth. <br>
 Each motif measures 2 inches.
 <br>Small Cloth measures 64 inches. Excluding border.
 <br>Large Cloth measures 64x84 inches. Excluding border.<br>
-Milwards Steel Crochet Hook No. 9.<br> 
+Milwards Steel Crochet Hook No. 9. 
 <br><b>FIRST MOTIF:</b> Starting at center, ch 18. Join with sl st to form ring. 
 <br><b>1st rnd:</b> Ch 1, make 32 sc in ring. Join with sl st to first sc. 
 <br><b>2nd rnd:</b> Ch 1, sc in joining, (ch 5, skip next sc, sc in next sc) 15 times; ch 2, dc in first sc to form last loop-16 loops. 
@@ -50,23 +26,17 @@ to form last loop.
 <br><b>2nd rnd:</b> Ch 1, sc in loop just formed, * ch 7, in next loop make sc, ch 7 and sc. Repeat from * around, ending with ch 7, sc in first loop used at beg of rnd, ch 4, dc in first sc to form last loop. <br><b>3rd rnd:</b> Ch sc in loop just formed, (ch 7, sc in next loop) 6 times; * ch 7, in corner loop make sc, ch 7 and sc; ** ch 7, sc in next loop. Repeat from ** across to within next corner loop. Repeat from * around, ending with ch 4, dc in first sc. 
 <br><b>4th and 5th rnds:</b> Ch 1, sc in loop just formed, * ch 7, sc in next loop. Repeat from * around, ending as on 3rd rnd. At end of 5th rnd break off and fasten. Block to measurements. 
 <br><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- crochet stuff -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5410888958"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
-
+<img src="images/medowsweet2.jpg">
 <br><br>
 
+
 <a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<br><br>
+
 </font> 
+</td></tr></table></center>
+</body></html>
 
 
 
-</body>
-</html>
+
