--- a/tablecloths/bouquet.html
+++ b/tablecloths/bouquet.html
@@ -1,47 +1,20 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-
-
-<html><head>
-
-
-<title>Bride's Bouquet Free Crochet Tablecloth Pattern</title>
-
-
-</head>
+<html><head><title>Brides Bouquet Tablecloth  - Free Crochet Cotton Pattern</title></head>
 <body>
-<center>
-<table width="90%" height="100%" border="0" cellpadding="50" bgcolor="white"><tr><td>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- meme -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:468px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="9746437906"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<center><table width="90%" border="0"><tr><td><br>
 
+<p align="right"><a href="https://drive.google.com/uc?id=1CSC4bBdOllMAIznarWANkSjfwCSlsDi_&export=download&export=download"><img src="images/bouquet.jpg" align="right"  width="400" height="425" border="0"></a></p>
+<font face="trebuchet MS" color="#76769B" size="5"><b>Brides Bouquet Tablecloth - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b>
 
-<p align="right"><font face="trebuchet MS" color="#76769B" size="4">Click image for a larger view</font><br><a href="images/bouquetlarge.jpg" target="new"><img src="images/bouquet.jpg" align="right"  width="300" height="300"></a></p>
-
-<font face="comic sans ms" color="#76769B" size="5"><b>Bride's Bouquet Free Crochet Tablecloth Pattern</b></font>
-<font face="Times New Roman" size="2"><br><b>MATERIALS:</b><br> 
-J. & P. COATS "KNIT-CRO-SHEEN," Art. A. 64: 19 balls of No. 1 White, No. 61 Ecru No. 42 Cream; <br>or<br> J. & P. COATS "KNIT-CRO-SHEEN," Art. A. 65: 12 balls of No. 1 White or No. 61 Ecru. <br>Milwards Steel Crochet Hook NO. 7. 
+ <br>J. & P. COATS "KNIT-CRO-SHEEN," Art. A. 64: 19 balls of No. 1 White, No. 61 Ecru No. 42 Cream; <br>or<br> J. & P. COATS "KNIT-CRO-SHEEN," Art. A. 65: 12 balls of No. 1 White or No. 61 Ecru. <br>Milwards Steel Crochet Hook NO. 7. 
 <br><b>Starting at center</b> Ch 8. Join with sl st to form ring. 
 <br><b>1st rnd:</b> Ch 3, make 15 dc in ring. Join to top of ch-3. 
 
-<br><b>2nd rnd:</b> Ch 3, skip joining, * dc in next dc, ch 4, sl st in 4th ch from hook—picot made; dc in same dc, dc in next dc. Repeat from * around, making dc, picot and dc in last dc. Join to top of ch-3. 
+<br><b>2nd rnd:</b> Ch 3, skip joining, * dc in next dc, ch 4, sl st in 4th ch from hook-picot made; dc in same dc, dc in next dc. Repeat from * around, making dc, picot and dc in last dc. Join to top of ch-3. 
 
-<br><b>3rd rnd:</b> Ch 23, * dc in 8th ch from hook, (ch 2, skip 2 ch, dc in next ch) 3 times; ch 2, skip 2 ch, dtr in next ch; skip next dc, next picot and following dc of 2nd rnd, dc in next dc—spoke started; ch 20. Repeat from * around, ending with dtr in last ch of last spoke. Join to 3rd ch of ch-23 (where first dtr was made)-8 spokes. 
+<br><b>3rd rnd:</b> Ch 23, * dc in 8th ch from hook, (ch 2, skip 2 ch, dc in next ch) 3 times; ch 2, skip 2 ch, dtr in next ch; skip next dc, next picot and following dc of 2nd rnd, dc in next dc-spoke started; ch 20. Repeat from * around, ending with dtr in last ch of last spoke. Join to 3rd ch of ch-23 (where first dtr was made)-8 spokes. 
 
 <br><b>4th rnd:</b> * In first sp of next spoke make 2 sc and hdc; (4 dc in next sp of same spoke) 3 times; 10 dc in next sp; working along opposite side of same spoke, (make 4 dc in next sp) 3 times; in next sp make hdc and 2 sc. Repeat from * around. Join to first sc. 
 
@@ -55,7 +28,7 @@ J. & P. COATS "KNIT-CRO-SHEEN," Art. A. 64: 19 balls of No. 1 White, No. 61 Ecru
 
 <br><b>9th rnd:</b> In first sp make sl st, ch 3 and 2 dc; (3 dc in next sp) 10 times; * skip next sp, (3 dc in next sp) 11 times. Repeat from * around, ending with skip last sp. Join to top of ch-3. 
 
-<br><b>10th rnd:</b> Skip joining, sl st in next 3 dc, ch 5, skip 1 dc, dc in next dc, (ch 2, skip 1 dc, dc in next dc) 12 times; * ch 20, dc in 8th ch from hook, (ch 2, skip 2 ch, dc in next ch) 4 times—spoke started; skip next 6 dc of 9th rnd, dc in next dc, (ch 2, skip 1 dc, dc in next dc) 13 times. Repeat from * around, ending with dc in last ch of last spoke. Join as on 6th rnd-8 spokes. 
+<br><b>10th rnd:</b> Skip joining, sl st in next 3 dc, ch 5, skip 1 dc, dc in next dc, (ch 2, skip 1 dc, dc in next dc) 12 times; * ch 20, dc in 8th ch from hook, (ch 2, skip 2 ch, dc in next ch) 4 times-spoke started; skip next 6 dc of 9th rnd, dc in next dc, (ch 2, skip 1 dc, dc in next dc) 13 times. Repeat from * around, ending with dc in last ch of last spoke. Join as on 6th rnd-8 spokes. 
 
 <br><b>11th rnd:</b> * In next sp make sc and hdc; (2 dc in next sp) 11 times; in next sp make hdc and sc; in first sp of next spoke make 2 sc and hdc; (3 dc in next sp) 3 times; 10 dc in next sp, (3 dc in next sp) 3 times; in next sp make hdc and 2 sc. Repeat from * around. Join to first sc.
  
@@ -158,24 +131,23 @@ sc, ch 7 and sc; ch 7, sc in next loop, ch 7, in next loop make sc, ch 7 and sc;
 
 <br><b>Next 6 rnds:</b> Repeat 27th rnd. 
 
-<br><b>105th rnd:</b> Ch 1, sc in loop just formed, * 5 tr in next sc—shell made; sc in next loop, ch 9, sc in next loop. Repeat from * around, ending with ch 9. Join to first sc. 
+<br><b>105th rnd:</b> Ch 1, sc in loop just formed, * 5 tr in next sc-shell made; sc in next loop, ch 9, sc in next loop. Repeat from * around, ending with ch 9. Join to first sc. 
 
-<br><b>106th rnd:</b> Sl st to center of next shell, sc in center st of same shell, * ch 3; in center ch of next loop make tr, ch 4, sl st in tr just made—picot made, 2 tr, picot, tr, picot, 2 tr, picot and tr; ch 3, sc in center st of next shell. Repeat from * around, ending with ch 3. Join to first sc. Break off and fasten. Block and press. 
-
-<br><br>
-
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- crochet stuff -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5410888958"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
+<br><b>106th rnd:</b> Sl st to center of next shell, sc in center st of same shell, * ch 3; in center ch of next loop make tr, ch 4, sl st in tr just made-picot made, 2 tr, picot, tr, picot, 2 tr, picot and tr; ch 3, sc in center st of next shell. Repeat from * around, ending with ch 3. Join to first sc. Break off and fasten. Block and press. 
 
 <br><br>
+
+<img src="images/bouquet2.jpg">
+<br><br>
+
+
 <a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<br><br>
 
-</td></tr></table></center></body></html>
+</font> 
+</td></tr></table></center>
+</body></html>
+
+
+
+
