--- a/tablecloths/shadow.html
+++ b/tablecloths/shadow.html
@@ -1,38 +1,16 @@
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head>
-<title>Shadow Squares Free Crochet Tableclothe Pattern</title>
-</head>
+<html><head><title>Shadow Squares Tablecloth  - Free Crochet Cotton Pattern</title></head>
 <body>
-<center>
-<table width="90%" height="100%" border="0" cellpadding="50" bgcolor="white">
-<tr><td>
+<center><table width="90%" border="0"><tr><td><br>
 
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- doilylinks -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5009629351"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- meme -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:468px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="9746437906"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
-<p align="right"><font face="trebuchet MS" color="#76769B" size="4">Click image for a larger view</font><br><a href="images/shadowlarge.jpg" target="new"><img src="images/shadow.jpg" align="right"  width="300" height="300"></a><img src="images/shadowextra.jpg" align="right"  width="300" height="300"></p>
-
-
-<font face="trebuchet MS" color="#76769B" size="5"><b>Shadow Squares Tablecloth Free Crochet Pattern</b></font><br><br>
+<p align="right"><a href="https://drive.google.com/uc?id=1vibi79fTIyarVVVaiCBBQcEetPomYuZO&export=download&export=download"><img src="images/shadow.jpg" align="right"  width="400" height="425" border="0"></a></p>
+<font face="trebuchet MS" color="#76769B" size="5"><b>Shadow Squares Tablecloth - Free Crochet Pattern</b></font><br><br>
 <font face="verdana" size="2"><b>MATERIALS:</b>
-J. & P. COATS "KNIT-CRO-SHEEN," Art. A. 64: 18 balls of No. 1 White, No. 61 Ecru or No. 42 Cream for Small Cloth; 24 balls for Large Cloth; <br>or<br>
- J. & P. COATS "KNIT-CRO-SHEEN," Art. A. 65: 12 balls of No. 1 White or No. 61 Ecru for Small Cloth; 15 balls for Large Cloth. <br>Milwards Steel Crochet Hook No. 7. 
+
+<br>J. & P. COATS "KNIT-CRO-SHEEN," Art. A. 64: 18 balls of No. 1 White, No. 61 Ecru or No. 42 Cream for Small Cloth; 24 balls for Large Cloth; <br>or<br>
+ J. & P. COATS "KNIT-CRO-SHEEN," Art. A. 65: 12 balls of No. 1 White or No. 61 Ecru for Small Cloth; 15 balls for Large Cloth. 
+ <br>Milwards Steel Crochet Hook No. 7. 
 <br>Small Cloth measures 65 inches square Large Cloth measures 65 x 84 inches Each motif measures 2 3/4 inches square.
 <br><b>FIRST MOTIF</b> . . . Starting at corner, ch 5-starting chain made. 
 <br><b>1st row:</b> In 5th ch from hook make tr, ch 7 and 2 tr. Ch 3, turn. 
@@ -51,25 +29,18 @@ J. & P. COATS "KNIT-CRO-SHEEN," Art. A. 64: 18 balls of No. 1 White, No. 61 Ecru
 <br><b>3rd rnd:</b> Ch 1, sc in loop just formed, (ch 5, sc in next loop) twice; starting at * on 2nd rnd, complete rnd. 
 <br><b>4th rnd:</b> Ch 1, sc in joining, ch 4, sc in next loop, ch 4, in next loop make sc, ch 3 and 2 dc; ch 3, sl st in last dc made, in next loop make 2 dc, ch 3 and sc; * ch 4, in next corner loop make 3 dc, ch 5 and 3 dc; ** ch 4, in next loop make sc, ch 3 and 2 dc; ch 3, sl st in last de made, in next loop make 2 dc, ch 3 and sc; ch 4, sc in next loop. Repeat from ** across to within next corner loop, ending with 2 dc, ch 3 and sc in last loop. Repeat from * around, ending with 2 dc in first loop used at beg of rnd, ch 3. Join with sl st to first sc. Break off and fasten. Block to measurements. 
 
-
 <br><br>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- crochet stuff -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5410888958"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
-
+<img src="images/shadow2.jpg">
 <br><br>
+
 
 <a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<br><br>
+
 </font> 
+</td></tr></table></center>
+</body></html>
 
 
 
-</body>
-</html>
+
