--- a/tablecloths/starw.html
+++ b/tablecloths/starw.html
@@ -1,50 +1,16 @@
- <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 
-<html><head>
-
-<title>Free Vintage Crochet - Star wheel Tablecloth Doily Pattern</title>
-
-</head>
-
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html><head><title>Star Wheel Tablecloth  - Free Crochet Cotton Pattern</title></head>
 <body>
-<center>
-<table width="90%" height="100%" border="0" cellpadding="50" bgcolor="white"><tr><td> 
+<center><table width="90%" border="0"><tr><td><br>
 
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<p align="right"><a href="https://drive.google.com/uc?id=19EHFRMnQW5C_wAySlfNr9LTGZAAoclit&export=download&export=download"><img src="images/starw.jpg" align="right"  width="400" height="425" border="0"></a></p>
+<font face="trebuchet MS" color="#76769B" size="5"><b>Star Wheel Tablecloth - Free Crochet Pattern</b></font><br><br>
+<font face="verdana" size="2"><b>MATERIALS:</b>
 
-<!-- doilylinks -->
-
-<ins class="adsbygoogle"
-
-     style="display:inline-block;width:728px;height:15px"
-
-     data-ad-client="ca-pub-7162871844388187"
-
-     data-ad-slot="5009629351"></ins>
-
-<script>
-
-(adsbygoogle = window.adsbygoogle || []).push({});
-
-</script><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- meme -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:468px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="9746437906"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
-<p align="right"><font face="trebuchet MS" color="#76769B" size="4">Click image for a larger view</font><br><a href="images/starwlarge.jpg" target="new"><img src="images/starw.jpg" align="right"  width="300" height="300"></a><img src="images/starwmotif.jpg" align="right"  width="300" height="300"></p>
-
-
-
-<font face="comic sans ms" color="#76769B" size="5"><b>Free Vintage Crochet - Star Wheel Tablecloth Doily Pattern</b></font>
 <br>
-<font face="Times New Roman" size="2"><br><b>MATERIALS:</b><br>
 
-Choose one of the following-threads in size 20, White or Ecru: Clark's- 0.N.T Mercerized Crochet, 74 balls.
+Choose one of the following-threads in size 20, White or Ecru: Clark's 0.N.T Mercerized Crochet, 74 balls.
 <br> J. & P. Coats Mercerized Crochet, 53 balls. 
 <br>J. & P. Coats Big Ball Best Six Cord Mercerized Crochet, 31 balls.
 <br> Milward's steel crochet hook No. 9 or 10. 
@@ -74,29 +40,16 @@ Choose one of the following-threads in size 20, White or Ecru: Clark's- 0.N.T Me
 
 
 <br><br>
-
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- crochet stuff -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:15px"
-     data-ad-client="ca-pub-7162871844388187"
-     data-ad-slot="5410888958"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
+<img src="images/starw2.jpg">
 <br><br>
 
+
 <a href="http://www.doilybox.com"><font face="comic sans ms" size="5" color="#648464">HOME</font></a>
+<br><br>
 
+</font> 
 </td></tr></table></center>
-
-
-
-</body>
-
-</html>
-
+</body></html>
 
 
 
