--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		<li><a href="floral.html">Floral Doily Patterns</a></li>
                 <li><a href="pineapple.html">Pineapple Doily Patterns</a></li>
                 <li><a href="ruffle.html">Ruffle Doily Patterns</a></li>
+		<li><a href="tablecloths.html">Tablecloth Patterns</a></li>
                 <li><b><a href="index.html"><font color="#ff0066"><b>->HOME<-</font></a></li>
             </ul>
         </div>
