--- a/floral.html
+++ b/floral.html
@@ -13,7 +13,7 @@
   height: 30px;
 }
 </style>
-<script>window._epn = {campaign: 5338775335};</script>
+<script data-ad-client="ca-pub-7162871844388187" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="wrap">
